// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeConfig with multiple bundles should create config 1`] = `
Object {
  "bundles": Object {
    "app": Object {
      "app": true,
      "assetsDest": "",
      "dependsOn": Array [
        "base_dll",
      ],
      "dev": false,
      "dll": false,
      "entry": Object {
        "entryFiles": Array [
          "./spp.js",
        ],
        "setupFiles": Array [],
      },
      "external": false,
      "hasteOptions": Object {},
      "looseMode": [Function],
      "maxWorkers": 7,
      "minify": false,
      "minifyOptions": undefined,
      "name": "app",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "indexed-ram-bundle",
    },
    "base_dll": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [],
      "dev": false,
      "dll": true,
      "entry": Object {
        "entryFiles": Array [
          "./dll.js",
        ],
        "setupFiles": Array [],
      },
      "external": false,
      "hasteOptions": Object {},
      "looseMode": [Function],
      "maxWorkers": 7,
      "minify": false,
      "minifyOptions": undefined,
      "name": "base_dll",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "indexed-ram-bundle",
    },
    "index": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [
        "base_dll",
      ],
      "dev": false,
      "dll": false,
      "entry": Object {
        "entryFiles": Array [
          "./host.js",
        ],
        "setupFiles": Array [],
      },
      "external": false,
      "hasteOptions": Object {},
      "looseMode": [Function],
      "maxWorkers": 7,
      "minify": false,
      "minifyOptions": undefined,
      "name": "index",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
  },
  "platforms": Array [
    "ios",
    "android",
  ],
  "server": Object {
    "host": "localhost",
    "port": 8081,
  },
  "templates": Object {
    "filename": Object {
      "__server__": "[bundleName].[platform].bundle",
      "android": "[bundleName].[platform].bundle",
      "ios": "[bundleName].jsbundle",
    },
  },
  "webpackConfigs": Object {
    "app": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Object {
        "entryFiles": Array [
          "./spp.js",
        ],
        "setupFiles": Array [],
      },
      "mode": "production",
      "output": Object {
        "filename": "app.jsbundle",
        "globalObject": "this",
        "library": "app",
        "libraryTarget": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
        "sourceMapFilename": "[file].map",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        WebpackRamBundlePlugin {
          "bundleId": "app",
          "bundleName": "app",
          "indexRamBundle": true,
          "maxWorkers": 7,
          "minify": false,
          "minifyOptions": undefined,
          "modules": Array [],
          "name": "WebpackRamBundlePlugin",
          "preloadBundles": Array [
            "base_dll",
          ],
          "singleBundleMode": false,
          "sourceMap": true,
        },
        DefinePlugin {
          "definitions": Object {
            "process.env.HAUL_BUNDLES": "{\\"index\\":0,\\"base_dll\\":1,\\"app\\":2}",
          },
        },
        LooseModeWebpackPlugin {
          "checkLooseMode": [Function],
        },
        DllReferencePlugin {
          "options": Object {
            "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
            "manifest": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
            "sourceType": "this",
          },
        },
      ],
      "target": "webworker",
    },
    "base_dll": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Object {
        "entryFiles": Array [
          "./dll.js",
        ],
        "setupFiles": Array [],
      },
      "mode": "production",
      "output": Object {
        "filename": "base_dll.jsbundle",
        "globalObject": "this",
        "library": "base_dll",
        "libraryTarget": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
        "sourceMapFilename": "[file].map",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        WebpackRamBundlePlugin {
          "bundleId": "base_dll",
          "bundleName": "base_dll",
          "indexRamBundle": true,
          "maxWorkers": 7,
          "minify": false,
          "minifyOptions": undefined,
          "modules": Array [],
          "name": "WebpackRamBundlePlugin",
          "preloadBundles": Array [],
          "singleBundleMode": false,
          "sourceMap": true,
        },
        DefinePlugin {
          "definitions": Object {
            "process.env.HAUL_BUNDLES": "{\\"index\\":0,\\"base_dll\\":1,\\"app\\":2}",
          },
        },
        LooseModeWebpackPlugin {
          "checkLooseMode": [Function],
        },
        DllPlugin {
          "options": Object {
            "name": "base_dll",
            "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
          },
        },
      ],
      "target": "webworker",
    },
    "index": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Object {
        "entryFiles": Array [
          "./host.js",
        ],
        "setupFiles": Array [],
      },
      "mode": "production",
      "output": Object {
        "filename": "index.jsbundle",
        "globalObject": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
        "sourceMapFilename": "[file].map",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": true,
          "preloadBundles": Array [
            "base_dll",
          ],
          "sourceMap": true,
        },
        DefinePlugin {
          "definitions": Object {
            "process.env.HAUL_BUNDLES": "{\\"index\\":0,\\"base_dll\\":1,\\"app\\":2}",
          },
        },
        LooseModeWebpackPlugin {
          "checkLooseMode": [Function],
        },
        DllReferencePlugin {
          "options": Object {
            "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
            "manifest": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
            "sourceType": "this",
          },
        },
      ],
      "target": "webworker",
    },
  },
}
`;

exports[`makeConfig with multiple bundles should create config for packager server 1`] = `
Object {
  "bundles": Object {
    "app": Object {
      "app": true,
      "assetsDest": "",
      "dependsOn": Array [
        "base_dll",
      ],
      "dev": false,
      "dll": false,
      "entry": Object {
        "entryFiles": Array [
          "./spp.js",
        ],
        "setupFiles": Array [],
      },
      "external": false,
      "hasteOptions": Object {},
      "looseMode": [Function],
      "maxWorkers": 7,
      "minify": false,
      "minifyOptions": undefined,
      "name": "app",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
    "base_dll": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [],
      "dev": false,
      "dll": true,
      "entry": Object {
        "entryFiles": Array [
          "./dll.js",
        ],
        "setupFiles": Array [],
      },
      "external": false,
      "hasteOptions": Object {},
      "looseMode": [Function],
      "maxWorkers": 7,
      "minify": false,
      "minifyOptions": undefined,
      "name": "base_dll",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
    "index": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [
        "base_dll",
      ],
      "dev": false,
      "dll": false,
      "entry": Object {
        "entryFiles": Array [
          "./host.js",
        ],
        "setupFiles": Array [],
      },
      "external": false,
      "hasteOptions": Object {},
      "looseMode": [Function],
      "maxWorkers": 7,
      "minify": false,
      "minifyOptions": undefined,
      "name": "index",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
  },
  "platforms": Array [
    "ios",
    "android",
  ],
  "server": Object {
    "host": "localhost",
    "port": 8081,
  },
  "templates": Object {
    "filename": Object {
      "__server__": "[bundleName].[platform].bundle",
      "android": "[bundleName].[platform].bundle",
      "ios": "[bundleName].jsbundle",
    },
  },
  "webpackConfigs": Object {
    "app": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Object {
        "entryFiles": Array [
          "./spp.js",
        ],
        "setupFiles": Array [],
      },
      "mode": "production",
      "output": Object {
        "filename": "app.ios.bundle",
        "globalObject": "this",
        "library": "app",
        "libraryTarget": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
        "sourceMapFilename": "[file].map",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": false,
          "preloadBundles": Array [
            "base_dll",
          ],
          "sourceMap": true,
        },
        DefinePlugin {
          "definitions": Object {
            "process.env.HAUL_BUNDLES": "{\\"index\\":0,\\"base_dll\\":1,\\"app\\":2}",
          },
        },
        LooseModeWebpackPlugin {
          "checkLooseMode": [Function],
        },
        DllReferencePlugin {
          "options": Object {
            "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
            "manifest": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
            "sourceType": "this",
          },
        },
      ],
      "target": "webworker",
    },
    "base_dll": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Object {
        "entryFiles": Array [
          "./dll.js",
        ],
        "setupFiles": Array [],
      },
      "mode": "production",
      "output": Object {
        "filename": "base_dll.ios.bundle",
        "globalObject": "this",
        "library": "base_dll",
        "libraryTarget": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
        "sourceMapFilename": "[file].map",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": false,
          "preloadBundles": Array [],
          "sourceMap": true,
        },
        DefinePlugin {
          "definitions": Object {
            "process.env.HAUL_BUNDLES": "{\\"index\\":0,\\"base_dll\\":1,\\"app\\":2}",
          },
        },
        LooseModeWebpackPlugin {
          "checkLooseMode": [Function],
        },
        DllPlugin {
          "options": Object {
            "name": "base_dll",
            "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
          },
        },
      ],
      "target": "webworker",
    },
    "index": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Object {
        "entryFiles": Array [
          "./host.js",
        ],
        "setupFiles": Array [],
      },
      "mode": "production",
      "output": Object {
        "filename": "index.ios.bundle",
        "globalObject": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
        "sourceMapFilename": "[file].map",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": false,
          "preloadBundles": Array [
            "base_dll",
          ],
          "sourceMap": true,
        },
        DefinePlugin {
          "definitions": Object {
            "process.env.HAUL_BUNDLES": "{\\"index\\":0,\\"base_dll\\":1,\\"app\\":2}",
          },
        },
        LooseModeWebpackPlugin {
          "checkLooseMode": [Function],
        },
        DllReferencePlugin {
          "options": Object {
            "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
            "manifest": "<<REPLACED>>/packages/haul-core/src/preset/__tests__/base_dll.manifest.json",
            "sourceType": "this",
          },
        },
      ],
      "target": "webworker",
    },
  },
}
`;

exports[`makeConfig with single bundle should create config for basic-bundle 1`] = `
Object {
  "bundles": Object {
    "index": Object {
      "app": false,
      "assetsDest": "",
      "dependsOn": Array [],
      "dev": false,
      "dll": false,
      "entry": Object {
        "entryFiles": Array [
          "react-native/Libraries/Core/InitializeCore.js",
          "index.js",
        ],
        "setupFiles": Array [
          "react-native/Libraries/Core/InitializeCore.js",
        ],
      },
      "external": false,
      "hasteOptions": Object {},
      "looseMode": [Function],
      "maxWorkers": 7,
      "minify": false,
      "minifyOptions": undefined,
      "name": "index",
      "platform": "ios",
      "providesModuleNodeModules": Array [
        "react-native",
      ],
      "root": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "sourceMap": true,
      "type": "basic-bundle",
    },
  },
  "platforms": Array [
    "ios",
    "android",
  ],
  "server": Object {
    "host": "localhost",
    "port": 8081,
  },
  "templates": Object {
    "filename": Object {
      "__server__": "[bundleName].[platform].bundle",
      "android": "[bundleName].[platform].bundle",
      "ios": "[bundleName].jsbundle",
    },
  },
  "webpackConfigs": Object {
    "index": Object {
      "context": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
      "devtool": false,
      "entry": Object {
        "entryFiles": Array [
          "react-native/Libraries/Core/InitializeCore.js",
          "index.js",
        ],
        "setupFiles": Array [
          "react-native/Libraries/Core/InitializeCore.js",
        ],
      },
      "mode": "production",
      "output": Object {
        "filename": "index.jsbundle",
        "globalObject": "this",
        "path": "<<REPLACED>>/packages/haul-core/src/preset/__tests__",
        "publicPath": "http://localhost:8081/",
        "sourceMapFilename": "[file].map",
      },
      "plugins": Array [
        DefinePlugin {
          "definitions": Object {
            "__DEV__": false,
            "process.env": Object {
              "NODE_ENV": "\\"production\\"",
            },
          },
        },
        LoaderOptionsPlugin {
          "options": Object {
            "debug": false,
            "minimize": false,
            "test": Object {
              "test": [Function],
            },
          },
        },
        SourceMapDevToolPlugin {
          "fallbackModuleFilenameTemplate": "webpack://[namespace]/[resourcePath]?[hash]",
          "moduleFilenameTemplate": "[absolute-resource-path]",
          "namespace": "",
          "options": Object {
            "filename": "[file].map",
            "module": true,
            "moduleFilenameTemplate": "[absolute-resource-path]",
            "test": /\\\\\\.\\(js\\|jsx\\|css\\|ts\\|tsx\\|\\(js\\)\\?bundle\\)\\(\\$\\|\\\\\\?\\)/i,
          },
          "sourceMapFilename": "[file].map",
          "sourceMappingURLComment": "
//# sourceMappingURL=[url]",
        },
        WebpackBasicBundlePlugin {
          "bundle": false,
          "preloadBundles": Array [],
          "sourceMap": true,
        },
        DefinePlugin {
          "definitions": Object {
            "process.env.HAUL_BUNDLES": "{\\"index\\":0}",
          },
        },
        LooseModeWebpackPlugin {
          "checkLooseMode": [Function],
        },
      ],
      "target": "webworker",
    },
  },
}
`;
